--- a/WatchHistory/WatchHistory/WatchHistory.csproj
+++ b/WatchHistory/WatchHistory/WatchHistory.csproj
@@ -115,14 +115,8 @@
     <Compile Include="AddYoutubeLink\YoutubeUrlException.cs" />
     <Compile Include="Data\DataManagerFilesExtensions.cs" />
     <Compile Include="Data\Files.v1_0.cs" />
-    <Compile Include="Data\Files.v2_1.cs">
-      <DependentUpon>Files.v2_1.xsd</DependentUpon>
-    </Compile>
-    <Compile Include="Data\Files.v2_3.cs">
-      <DependentUpon>Files.v2_3.xsd</DependentUpon>
-    </Compile>
-    <Compile Include="Data\Files.v2_2.cs">
-      <DependentUpon>Files.v2_2.xsd</DependentUpon>
+    <Compile Include="Data\Files.v2_4.cs">
+      <DependentUpon>Files.v2_4.xsd</DependentUpon>
     </Compile>
     <Compile Include="Data\FilesExtensions.cs" />
     <Compile Include="Data\Implementations\YoutubeWatchesProcessor.cs" />
@@ -130,6 +124,11 @@
     <Compile Include="Data\Implementations\FilesModelConverter.cs" />
     <Compile Include="Data\Implementations\FilesSerializer.cs" />
     <Compile Include="Data\IFilesSerializer.cs" />
+    <Compile Include="EditNote\IEditNoteViewModel.cs" />
+    <Compile Include="EditNote\Implementations\EditNoteViewModel.cs" />
+    <Compile Include="EditNote\Implementations\EditNoteWindow.xaml.cs">
+      <DependentUpon>EditNoteWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="EditTitle\Implementations\EditTitleWindow.xaml.cs">
       <DependentUpon>EditTitleWindow.xaml</DependentUpon>
     </Compile>
@@ -202,6 +201,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Page Include="EditNote\Implementations\EditNoteWindow.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="EditTitle\Implementations\EditTitleWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -221,9 +224,6 @@
     <Compile Include="Data\Implementations\DataManager.cs" />
     <Compile Include="Data\DefaultValues.cs" />
     <Compile Include="Data\Implementations\FileObserver.cs" />
-    <Compile Include="Data\Files.v2_0.cs">
-      <DependentUpon>Files.v2_0.xsd</DependentUpon>
-    </Compile>
     <Compile Include="Data\IFileObserver.cs" />
     <Compile Include="Data\IDataManager.cs" />
     <Compile Include="Data\Settings.cs" />
@@ -275,9 +275,10 @@
     <AppDesigner Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Data\Files.v2_3.xsd">
+    <None Include="Data\Files.v2_4.xsd">
       <SubType>Designer</SubType>
     </None>
+    <None Include="Data\Files.v2_3.xsd" />
     <None Include="Data\Files.v2_2.xsd" />
     <None Include="Data\Files.v2_1.xsd" />
     <None Include="Data\Files.v2_0.xsd" />
