--- a/WatchHistory/WatchHistory/WatchHistory.csproj
+++ b/WatchHistory/WatchHistory/WatchHistory.csproj
@@ -274,7 +274,7 @@
       <Version>4.1.2</Version>
     </PackageReference>
     <PackageReference Include="DoenaSoft.MediaInfoHelper">
-      <Version>1.0.2</Version>
+      <Version>2.0.0</Version>
     </PackageReference>
     <PackageReference Include="DoenaSoft.ToolBox">
       <Version>1.0.7</Version>
@@ -291,7 +291,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>xcopy $(ProjectDir)\djdsoft.ico $(TargetDir)\
+    <PostBuildEvent>xcopy /y $(ProjectDir)\djdsoft.ico $(TargetDir)\
 IF NOT $(PlatformName)==x64 GOTO end
 IF NOT $(ConfigurationName)==Release GOTO end
 "%25ProgramFiles(x86)%25\Inno Setup 6\iscc.exe"  ..\..\..\..\..\WatchHistorySetup\setup.iss
