--- a/CleanUpHistory/CleanUpHistory.csproj
+++ b/CleanUpHistory/CleanUpHistory.csproj
@@ -8,9 +8,10 @@
     <OutputType>Exe</OutputType>
     <RootNamespace>DoenaSoft.WatchHistory</RootNamespace>
     <AssemblyName>CleanUpHistory</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
     <DebugSymbols>true</DebugSymbols>
@@ -80,13 +81,14 @@
       <Link>DJDSOFT.ICO</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="app.config" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="DoenaSoft.AbstractionLayer">
       <Version>2.0.6</Version>
     </PackageReference>
     <PackageReference Include="DoenaSoft.MediaInfoHelper">
-      <Version>2.0.8</Version>
+      <Version>3.0.2</Version>
     </PackageReference>
     <PackageReference Include="DoenaSoft.ToolBox">
       <Version>1.0.8</Version>
