--- a/WatchHistory/WatchHistory/WatchHistory - Backup.csproj
+++ b/WatchHistory/WatchHistory/WatchHistory - Backup.csproj
@@ -28,7 +28,7 @@
 	</ItemGroup>
 
 	<Target Name="PostBuild" AfterTargets="PostBuildEvent">
-	  <Exec Command="xcopy /y $(ProjectDir)djdsoft.ico $(TargetDir)\&#xD;&#xA;IF NOT $(PlatformName)==x64 GOTO end&#xD;&#xA;IF NOT $(ConfigurationName)==Release GOTO end&#xD;&#xA;&quot;%25ProgramFiles(x86)%25\Inno Setup 6\iscc.exe&quot;  ..\WatchHistorySetup\setup.iss&#xD;&#xA;:end&#xD;&#xA;" />
+	  <Exec Command="xcopy /y $(ProjectDir)djdsoft.ico $(TargetDir)\&#xD;&#xA;IF NOT $(PlatformName)==x64 GOTO end&#xD;&#xA;IF NOT $(ConfigurationName)==Release GOTO end&#xD;&#xA;&quot;%2525ProgramFiles(x86)%2525\Inno Setup 6\iscc.exe&quot;  ..\..\..\..\..\WatchHistorySetup\setup.iss&#xD;&#xA;:end" />
 	</Target>
 
 </Project>
