--- a/WatchHistory/WatchHistory/WatchHistory.csproj
+++ b/WatchHistory/WatchHistory/WatchHistory.csproj
@@ -27,7 +27,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\WatchHistoryXml\WatchHistoryXml.csproj" />
+	  <ProjectReference Include="..\WatchHistoryXml\WatchHistory.Xml.csproj" />
 	</ItemGroup>
 
 	<Target Name="PostBuild" AfterTargets="PostBuildEvent">
