--- a/WatchHistory/WatchHistoryXml/WatchHistory.Xml.csproj
+++ b/WatchHistory/WatchHistoryXml/WatchHistory.Xml.csproj
@@ -48,6 +48,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="DoenaSoft.MediaInfoHelper" Version="3.1.6" />
+		<!--<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />-->
 	</ItemGroup>
 
 </Project>
